# mcp-server-alpha

./: .dockerignore  .gitignore  Dockerfile  POWER_AUTOMATE_INTEGRATION.md  README.md  REASONING_AGENT.md  REASONING_AGENT_QUICK_REFERENCE.md  SEND_EMAIL_QUICK_REFERENCE.md  TROUBLESHOOTING_CLAUDE_DESKTOP.md  pyproject.toml  setup.bat  setup.sh  start_mcp.sh
docs/: ARCHITECTURE.md  INTEGRATION_GUIDE.md
examples/: agent_example.py  example_workflow.py  reasoning_agent_example.py  research_example.py
examples/products/: dental-basic-001.json  health-basic-001.json  vision-basic-001.json
src/mcp_server_alpha/: __init__.py  server.py
src/mcp_server_alpha/adapters/: __init__.py  base.py  chat.py
src/mcp_server_alpha/agents/: README.md  __init__.py  insurance_agent.py  reasoning_orchestrator.py  research_agent.py  tools.py
src/mcp_server_alpha/config/: __init__.py  loader.py
src/mcp_server_alpha/models/: __init__.py  consumer.py  product.py  quote.py  reasoning.py  research.py
src/mcp_server_alpha/orchestration/: __init__.py  workflow.py
src/mcp_server_alpha/providers/: __init__.py  base.py  mock_provider.py
src/mcp_server_alpha/tools/: __init__.py  analyzer.py  calculator.py  eligibility.py  enrollment.py  products.py  quotes.py  search.py  send_email.py  summarizer.py  weather.py
tests/: conftest.py
tests/integration/: test_workflows.py
tests/unit/: test_agent.py  test_config.py  test_models.py  test_providers.py  test_reasoning_orchestrator.py  test_tools.py
